bg fix
I messed up with the background a little.. pwq

--- a/assets/aboutMe.css
+++ b/assets/aboutMe.css
@@ -1,6 +1,10 @@
 html {
     background-color: #3c3c6499;
 }
+body {
+    margin: 0;
+    margin-top: 20px;
+}
 div {
     text-align: center;
     font-family: Verdana;
